packages/kit/test/apps/basics/src/routes/errors/invalid-route-response/+server.js
export function GET() {
	return 'this ought to be an object';
}
